--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,45 @@
+appdirs==1.4.4
+asgiref==3.2.10
 astroid==2.2.5
 autopep8==1.4.4
+beautifulsoup4==4.9.1
+cachetools==4.1.1
 certifi==2019.3.9
 chardet==3.0.4
 colorama==0.4.1
+distlib==0.3.1
 Django==2.1.7
+filelock==3.0.12
+google-api-core==1.22.2
+google-auth==1.21.2
+google-cloud-core==1.4.1
+google-cloud-storage==1.24.1
+google-resumable-media==0.5.1
+googleapis-common-protos==1.52.0
 idna==2.8
 isort==4.3.20
+jellyfish==0.6.1
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
+numpy==1.19.2
+pandas==1.1.2
+protobuf==3.13.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.5.0
 pylint==2.3.1
+python-dateutil==2.8.1
 python-google-places==1.4.1
 pytz==2018.9
 requests==2.21.0
+rsa==4.6
+selenium==3.141.0
 six==1.12.0
+soupsieve==2.0.1
+sqlparse==0.3.1
+toml==0.10.1
 typed-ast==1.4.0
+unicode==2.7
 urllib3==1.24.1
+virtualenv==20.0.31
 wrapt==1.11.1
